# Django-Scaffold

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
server/authentication/: admin.py  models.py  tests.py  urls.py  views.py
server/authentication/migrations/: 0001_initial.py  0002_user_role.py  0003_organization_user_organization.py
server/member/: models.py  serializers.py  urls.py  views.py
server/member/migrations/: 0001_initial.py
server/project/: models.py  tests.py  views.py
server/project/migrations/: 0001_initial.py  0002_initial.py
server/resources/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
server/resources/migrations/: 0001_initial.py
server/server/: settings.py  urls.py
server/user/: tests.py
server/user/migrations/: 0001_initial.py
