[tool.poetry]
name = "objectives-tracking"
version = "0.1.0"
description = ""
authors = ["vunk.lai <vunk.lai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
# Django plugin
django = "^4.2.3"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
# Other package

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
# fomat
black = "^23.3.0"
isort = "^5.12.0"
# linting
pylint = "^2.17.4"
pylint-django = "^2.5.3"
mypy = "^1.3.0"
# test
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.11.1"
# Other
commitizen = "^3.5.3"

[tool.isort]
profile = "black"
known_django = "django,rest_framework"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = "migrations"

[tool.pylint.main]
load-plugins = [
  "pylint_django"
]
django-settings-module = "server.settings"
ignore = [
  "db.sqlite3",
]

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "fixme",
]

[tool.pylint.basic]
good-names = [
  "pk",
  "_"
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
  "/migrations/"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
